Fix for 8064703 is not sufficient

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b64

        That fix makes deoptimization in arraycopy restart execution at the tightly coupled allocation. It is not robust enough. It leaves an uninitialized unreferenced array in the heap. That could break with CMS (see JDK-8073796). As pointed by GC folks, VerifyGC or anything that walks the entire heap could break as well. So we need to either disable the optimization that looks for tightly coupled allocations with CMS + VerifyGC etc. or find another way to fix the problem (do the zeroing right before the uncommon trap? In the deoptimization code? Move the guards before the allocation?)

              Assignee:
              Roland Westrelin
              Reporter:
              Roland Westrelin
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: